--- a/Css/Styel.css
+++ b/Css/Styel.css
@@ -1,9 +1,3 @@
-
-
-
-
-
-
 body {
     transition: 0.3s ease;
     background-color: hsl(235, 21%, 11%);
@@ -14,7 +8,7 @@ body.light{
     font-family: 'Josefin Sans', sans-serif;
 }
 .top{
-    background-image: url(/images/bg-desktop-dark.jpg);
+    background-image: url(./images/bg-desktop-dark.jpg);
     background-size: cover;
     height: 40vh;
     position: fixed;
@@ -25,17 +19,17 @@ body.light{
     transition:0.3s ease;
 }
 .light .top{
-    background-image: url(/images/bg-desktop-light.jpg);
+    background-image: url(./images/bg-desktop-light.jpg);
     transition:0.3s ease;
 }
 @media screen and (max-width: 500px) {
     .top {
-        background-image: url(/images/bg-mobile-dark.jpg);
+        background-image: url(./images/bg-mobile-dark.jpg);
     }
 }
 @media screen and (max-width: 500px) {
     .light .top {
-        background-image: url(/images/bg-mobile-light.jpg);
+        background-image: url(./images/bg-mobile-light.jpg);
     }
 }
 
